--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="navbar-header">
         <!-- <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" /> -->
-        <div class="no-Ibar navbar-brand apptitle">The Aquiferium</div>        
+        <div class="no-Ibar aquiferium-title apptitle">The Aquiferium</div> <!-- navbar-brand  -->       
         <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -61,13 +61,15 @@
       </div>
       <div class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
         <ul class="nav navbar-nav">
-          <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li>
-          <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karst</a></li>
-          <li ng-class="getClass('/conservation')"><a href="#/conservation">Conservation</a></li>
-          <li ng-class="getClass('/springs')"><a href="#/springs">Springs</a></li>
-          <li ng-class="getClass('/maps-data')"><a href="#/maps-data">Maps &amp; Data</a></li>
-          <li ng-class="getClass('/about')"><a href="#/about">About</a></li>
-          <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li>
+          <!-- <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li> -->
+          <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a></li>
+          <!-- <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karst</a></li> -->
+          <li ng-class="getClass('/geology')"><a href="#/geology">Geology</a></li>
+          <li ng-class="getClass('/springs')"><a href="#/springs">Springs &amp; Species</a></li>
+          <li ng-class="getClass('/conservation')"><a href="#/conservation">Governance &amp; Conservation</a></li>
+          <!-- <li ng-class="getClass('/maps-data')"><a href="#/maps-data">Maps &amp; Data</a></li> -->
+          <!-- <li ng-class="getClass('/about')"><a href="#/about">About</a></li> -->
+          <!-- <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li> -->
         </ul>
       </div>
     </div>
@@ -169,13 +171,15 @@
   <script src="scripts/app.js"></script>
   <!-- <script src="scripts/services/preloader.js"></script> -->
   <script src="scripts/controllers/navigation-controller.js"></script>
-  <script src="scripts/controllers/explore-controller.js"></script>
-  <script src="scripts/controllers/caves-karsts-controller.js"></script>
+  <!-- <script src="scripts/controllers/explore-controller.js"></script> -->
+  <script src="scripts/controllers/geography-controller.js"></script>
+  <!-- <script src="scripts/controllers/caves-karsts-controller.js"></script> -->
+  <script src="scripts/controllers/geology-controller.js"></script>
   <script src="scripts/controllers/conservation-controller.js"></script>
   <script src="scripts/controllers/springs-controller.js"></script>
-  <script src="scripts/controllers/maps-data.js"></script>
-  <script src="scripts/controllers/about-controller.js"></script>
-  <script src="scripts/controllers/contact-controller.js"></script>
+  <!-- <script src="scripts/controllers/maps-data.js"></script> -->
+  <!-- <script src="scripts/controllers/about-controller.js"></script> -->
+  <!-- <script src="scripts/controllers/contact-controller.js"></script> -->
   <script src="scripts/directives/skrollr.dir.js"></script>
   <script src="scripts/directives/eaa-aquifers-map-directive.js"></script>
   <script src="scripts/directives/eaa-gauge-data-interactive-recharge-directive.js"></script>
