--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <!-- Web Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link rel="stylesheet" type="text/css" href="styles/general.css">
@@ -32,11 +33,6 @@
     <link rel="stylesheet" type="text/css" href="styles/maps-data.css">
     <link rel="stylesheet" type="text/css" href="styles/about.css">
     <link rel="stylesheet" type="text/css" href="styles/contact.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/mq-small.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-medium.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-large.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-xlarge.css">
-    <link rel="stylesheet" type="text/css" href="styles/mq-hd.css">     -->
     <!-- <link rel="stylesheet" href="bower_components/leaflet-easy-print/easyPrint.css" /> -->
     <!-- endbuild -->
 </head>
@@ -48,10 +44,10 @@
   <!-- Navbar -->
   <div id="navbar" class="navbar-inverse navbar-default navbar-fixed-top" role="navigation" data-ng-controller="NavigationCtrl">
   <!-- Navbar -->
-    <div class="container-fluid">
+    <div class="container">
       <div class="navbar-header">
         <!-- <img class="img-responsive pull-left eaa-logo" src="./images/eaa_branding/eaa-logo-color.png" /> -->
-        <div class="no-Ibar aquiferium-title apptitle">The Aquiferium</div> <!-- navbar-brand  -->       
+        <div class="no-Ibar apptitle">The Aquiferium</div> <!-- navbar-brand  -->       
         <button type="button" class="navbar-toggle" ng-click="isCollapsed = !isCollapsed">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -59,8 +55,8 @@
           <span class="icon-bar"></span>
         </button>
       </div>
-      <div class="navbar-collapse" ng-class="isCollapsed ? 'collapse' : 'in'">
-        <ul class="nav navbar-nav">
+      <div class="navbar-collapse centered" ng-class="isCollapsed ? 'collapse' : 'in'">
+        <ul class="nav navbar-nav nav-spacing">
           <!-- <li ng-class="getClass('/explore')"><a href="#/explore">Explore</a></li> -->
           <li ng-class="getClass('/geography')"><a href="#/geography">Geography</a></li>
           <!-- <li ng-class="getClass('/caves-karsts')"><a href="#/caves-karsts">Caves &amp; Karst</a></li> -->
@@ -70,7 +66,7 @@
           <!-- <li ng-class="getClass('/maps-data')"><a href="#/maps-data">Maps &amp; Data</a></li> -->
           <!-- <li ng-class="getClass('/about')"><a href="#/about">About</a></li> -->
           <!-- <li ng-class="getClass('/contact')"><a href="#/contact">Contact</a></li> -->
-          <li><span class="glyphicon glyphicon-info-sign"></span></li>
+          <li><a id="information" class="information" ng-click="toggleInfo()"><span class="glyphicon glyphicon-info-sign"></span></a></li>
         </ul>
       </div>
     </div>
@@ -82,11 +78,11 @@
   </div>
 
   <!-- Footer -->
-  <div class="navbar-inverse navbar-fixed-bottom footer centered">
+  <!-- <div class="navbar-inverse navbar-fixed-bottom footer centered">
     <div class="container">
       <p>&#169; 2014 <a data-ng-href="http://edwardsaquifer.org" title="Edwards Aquifer Authority" target="new">Edwards Aquifer Authority</a> | Developed by <a data-ng-href="http://www.encompassproject.org" title="Encompass Project" target="new">Encompass Labs</a></p>
     </div>
-  </div>
+  </div> -->
 
   <!-- Testing Media Queries - remove before deploying. -->
   <!-- 
